[package]
name = "simple_cloudconvert"
version = "0.5.0"
description = "Simple Cloudconvert functionality for converting files"
authors = ["Ori raisfeld"]
license = "MIT"
categories = ["encoding", "api-bindings", "filesystem"]
repository = "https://github.com/raisfeld-ori/cloudconvert-converting"
readme = "README.md"
edition = "2021"

[dependencies]
reqwest = { version = "*", features = ["json", "multipart", "blocking"] }
serde_json = "1.0.134"
serde = { version = "1.0.163", features = ["derive"] }


[dev-dependencies]
dotenv = "*"