[package]
name = "simple_cloudconvert"
version = "0.5.1"
description = "Simple Cloudconvert functionality for converting files"
authors = ["Ori raisfeld"]
license = "MIT"
categories = ["encoding", "api-bindings", "filesystem"]
keywords = [
    "svg", "png", "pdf", "csv", "json", "xml", "word", "excel", "powerpoint", "image", "document", "file",
    "convert", "cloudconvert", "file.io", "fileconvert", "cloudconvert.io", "converting",
    "embedded", "cloudconvert.com", "file.io", "fileconvert.com", "fileconvert.io",
    ]
repository = "https://github.com/raisfeld-ori/cloudconvert-converting"
readme = "README.md"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "multipart", "blocking"] }
serde_json = "1.0.134"
serde = { version = "1.0.163", features = ["derive"] }


[dev-dependencies]
dotenv = "0.15.0"