[package]
name = "simple_cloudconvert"
version = "0.5.2"
description = "Simple Cloudconvert functionality for converting files"
authors = ["Ori raisfeld"]
license = "MIT"
categories = ["encoding", "api-bindings", "filesystem"]
keywords = [
    "cloudconvert", "converting", "pdf", "autocad", "docx"
    ]
repository = "https://github.com/raisfeld-ori/cloudconvert-converting"
readme = "README.md"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "multipart", "blocking"] }
serde_json = "1.0.135"
serde = { version = "1.0.163", features = ["derive"] }


[dev-dependencies]
dotenv = "0.15.0"